// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`whitespace '0' '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "whitespace",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`whitespace '1' ' ' conditional success tests AST matches snapshot 1`] = `" "`;

exports[`whitespace '2' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`whitespace '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`whitespace '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`whitespace '5' '
  
' conditional success tests AST matches snapshot 1`] = `
"
  
"
`;

exports[`whitespace '6' 'b' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "whitespace",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`optional whitespace '0' '' conditional success tests AST matches snapshot 1`] = `""`;

exports[`optional whitespace '1' ' ' conditional success tests AST matches snapshot 1`] = `" "`;

exports[`optional whitespace '2' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`optional whitespace '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`optional whitespace '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`optional whitespace '5' '
  
' conditional success tests AST matches snapshot 1`] = `
"
  
"
`;

exports[`optional whitespace '6' 'b' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`newline '0' '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "newline",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`newline '1' ' ' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "newline",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`newline '2' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`newline '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`newline '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`newline '5' '
  
' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 1,
    "index": 2,
    "line": 2,
  },
}
`;

exports[`newline '6' 'b' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "newline",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`whitespace '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`whitespace '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`whitespace '5' '
  
' conditional success tests AST matches snapshot 1`] = `
"
  
"
`;

exports[`optional whitespace '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`optional whitespace '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`optional whitespace '5' '
  
' conditional success tests AST matches snapshot 1`] = `
"
  
"
`;

exports[`newline '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`newline '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`newline '5' '
  
' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 1,
    "index": 2,
    "line": 2,
  },
}
`;

exports[`whitespace '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`whitespace '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`whitespace '5' '
  
' conditional success tests AST matches snapshot 1`] = `
"
  
"
`;

exports[`optional whitespace '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`optional whitespace '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`optional whitespace '5' '
  
' conditional success tests AST matches snapshot 1`] = `
"
  
"
`;

exports[`newline '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`newline '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`newline '5' '
  
' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 1,
    "index": 2,
    "line": 2,
  },
}
`;

exports[`whitespace '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`whitespace '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`whitespace '5' '
  
' conditional success tests AST matches snapshot 1`] = `
"
  
"
`;

exports[`optional whitespace '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`optional whitespace '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`optional whitespace '5' '
  
' conditional success tests AST matches snapshot 1`] = `
"
  
"
`;

exports[`newline '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`newline '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`newline '5' '
  
' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 1,
    "index": 2,
    "line": 2,
  },
}
`;

exports[`whitespace '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`whitespace '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`whitespace '5' '
  
' conditional success tests AST matches snapshot 1`] = `
"
  
"
`;

exports[`optional whitespace '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`optional whitespace '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`optional whitespace '5' '
  
' conditional success tests AST matches snapshot 1`] = `
"
  
"
`;

exports[`newline '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`newline '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`newline '5' '
  
' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 1,
    "index": 2,
    "line": 2,
  },
}
`;

exports[`whitespace '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`whitespace '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`whitespace '5' '
  
' conditional success tests AST matches snapshot 1`] = `
"
  
"
`;

exports[`optional whitespace '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`optional whitespace '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`optional whitespace '5' '
  
' conditional success tests AST matches snapshot 1`] = `
"
  
"
`;

exports[`newline '3' '' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`newline '4' '
' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`newline '5' '
  
' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 1,
    "index": 2,
    "line": 2,
  },
}
`;
